# mediawiki-parser

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  linter_notes.md  test.md
doc/: docs.yml
src/: ast.rs  build.rs  default_transformations.rs  error.rs  general_transformations.rs  grammar.rustpeg  lib.rs  main.rs  transformations.rs  traversion.rs  util.rs
src/tests/: mod.rs
