[package]
name = "mediawiki_parser"
version = "0.4.1"
authors = ["Valentin Roland <valentin@vroland.de>"]
description = "A strict parser for MediaWiki markdown."
repository = "https://github.com/vroland/mediawiki-parser"
documentation = "https://docs.rs/mediawiki_parser/"
build = "build.rs"
readme = "README.md"
keywords = ["mediawiki", "parser", "wikipedia", "wikibooks", "markdown"]
categories = ["parsing", "text-processing"]
license = "MIT"
edition = "2018"

[lib]
name = "mediawiki_parser"
path = "src/lib.rs"
doc = true

[features]
default = []
no_position = []
ptime = ["time"]

[[bin]]
name = "mwtoast"
path = "src/main.rs"
doc = true

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.2"
colored = "1.6"
time = { version = "0.1", optional = true }

[build-dependencies]
serde = "1.0"
serde_derive = "1.0"
peg = "0.5"
serde_yaml = "0.8"

